# ML-course-das511

./: .gitignore  Classification Part 1.ipynb  Classification Part 2 SVM.ipynb  Linear regression Practice.ipynb  Python Practice with Gradient Descent.ipynb  Regression Practice 1.ipynb  Regression Practice 2.ipynb  main.py  pyproject.toml
exam/: Exam-1.html  Exam-1.ipynb  UKM.csv  UKMtest.csv
homework/: Homework 1.ipynb  Homework_1.html  Homework_1.ipynb
